acvus-mir-test/tests/snapshots/e2e__lambda_in_filter.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 │   r0 = context_project @items
     1 │   r1 = context_load r0
     3 │   r2 = poison
     4 │   r3 = closure L0 []
     5 │   r4 = poison
     6 │   r5 = poison
     8 │   r6 = T0 + T0
     9 │   r7 = poison
    10 │   r8 = poison
    11 │   r9 = r6 + r8
    12 │   return r9

    ; r0 (@items) : <error>
    ; r1 (v1) : List<Int>
    ; r2 (iter(...)) : Iterator<Int>
    ; r3 (v6) : Fn(Int) -> Bool
    ; r4 (filter(...)) : Iterator<Int>
    ; r5 (collect(...)) : List<Int>
    ; r6 (v10) : String
    ; r7 (len(...)) : Int
    ; r8 (to_string(...)) : String
    ; r9 (v14) : String
    ; r10 (x) : List<Int>
    ; r11 (@items) : List<Int>
    ; r12 (v9) : String
    ; r13 (v4) : List<Int>
    ; r14 (v15) : List<Int>
    ; r15 (v2) : String

=== closure L0 (ValueId(0)) ===
     1 │   r0 = r1 != 0 (r2)
     2 │   return r0

    ; r0 (v3) : Bool
    ; r1 (v0) : Int
    ; r2 (v2) : Int
    ; r3 (x) : Int
    ; r4 (v4) : Int
