acvus-mir-test/tests/snapshots/e2e__lambda_map_arithmetic.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     0 │   r0 = storage_load $items
     1 │   r1 = closure L0 []
     2 │   r2 = call map(r0, r1)
     3 │   r3 = call len(r2)
     4 │   r4 = call to_string(r3)
     5 │   emit r4

    ; r0 ($items) : List<Int>
    ; r1 (v1) : Fn(Int) -> Int
    ; r2 (map(...)) : List<Int>
    ; r3 (len(...)) : Int
    ; r4 (to_string(...)) : String

=== closure L0 (i) ===
     0 │   r1 = const 1
     1 │   r2 = r0 + r1
     2 │   return r2

    ; r0 (v0) : Int
    ; r1 (v1) : Int
    ; r2 (v2) : Int
