acvus-mir-test/tests/snapshots/e2e__lambda_multiple_field_access.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 │   r0 = undef
     1 │   r1 = ref @users
     2 │   r2 = load r1
     4 │   r3 = ref @users
     5 │   r4 = call #0(r2)
     6 │   r5 = closure L0 []
     7 │   r6 = call #1(r4, r5)
     8 │   r7 = call #2(r6)
    10 │   r8 = T0 + T0
    11 │   r9 = call #3(r7)
    12 │   r10 = call #4(r9)
    13 │   r11 = r8 + r10
    14 │   return r11

    ; r0 (v19) : List<(String, Int)>
    ; r1 (@users) : Ref<List<{age: Int, name: String}>>
    ; r2 (@users) : List<{age: Int, name: String}>
    ; r3 (@users) : Ref<List<{age: Int, name: String}>>
    ; r4 (iter(...)) : Iterator<{age: Int, name: String}, Resolved(EffectSet { reads: {}, writes: {}, io: false, self_modifying: false })>
    ; r5 (v7) : Fn({age: Int, name: String}) -> (String, Int)
    ; r6 (map(...)) : Iterator<(String, Int), Resolved(EffectSet { reads: {}, writes: {}, io: false, self_modifying: false })>
    ; r7 (collect(...)) : List<(String, Int)>
    ; r8 (v13) : String
    ; r9 (len(...)) : Int
    ; r10 (to_string(...)) : String
    ; r11 (v18) : String
    ; r12 (v3) : String
    ; r13 (v11) : Ref<List<(String, Int)>>
    ; r14 (v14) : Ref<List<(String, Int)>>
    ; r15 (v12) : String
    ; r16 (x) : List<(String, Int)>
    ; r17 (v5) : List<{age: Int, name: String}>

=== closure L0 (ValueId(0)) ===
     0 │   r0 = undef
     1 │   r1 = r2.name
     2 │   r3 = r2.age
     3 │   r4 = tuple (r1, r3)
     4 │   return r4

    ; r0 (v13) : {age: Int, name: String}
    ; r1 (v5) : String
    ; r2 (v1) : {age: Int, name: String}
    ; r3 (v7) : Int
    ; r4 (v8) : (String, Int)
    ; r5 (v11) : Ref<{age: Int, name: String}>
    ; r6 (v3) : Ref<{age: Int, name: String}>
    ; r7 (v10) : {age: Int, name: String}
    ; r8 (u.age) : Ref<Int>
    ; r9 (v9) : Ref<{age: Int, name: String}>
    ; r10 (v12) : {age: Int, name: String}
    ; r11 (u.name) : Ref<String>
