acvus-mir-test/tests/snapshots/e2e__lambda_negate_param.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 │   r0 = undef
     1 │   r1 = ref @items
     2 │   r2 = load r1
     4 │   r3 = ref @items
     5 │   r4 = call #0(r2)
     6 │   r5 = closure L0 []
     7 │   r6 = call #1(r4, r5)
     8 │   r7 = call #2(r6)
    10 │   r8 = T0 + T0
    11 │   r9 = call #3(r7)
    12 │   r10 = call #4(r9)
    13 │   r11 = r8 + r10
    14 │   return r11

    ; r0 (v19) : List<Int>
    ; r1 (@items) : Ref<List<Int>>
    ; r2 (@items) : List<Int>
    ; r3 (@items) : Ref<List<Int>>
    ; r4 (iter(...)) : Iterator<Int, Resolved(EffectSet { reads: {}, writes: {}, io: false, self_modifying: false })>
    ; r5 (v7) : Fn(Int) -> Int
    ; r6 (map(...)) : Iterator<Int, Resolved(EffectSet { reads: {}, writes: {}, io: false, self_modifying: false })>
    ; r7 (collect(...)) : List<Int>
    ; r8 (v13) : String
    ; r9 (len(...)) : Int
    ; r10 (to_string(...)) : String
    ; r11 (v18) : String
    ; r12 (v3) : String
    ; r13 (v11) : Ref<List<Int>>
    ; r14 (v14) : Ref<List<Int>>
    ; r15 (v12) : String
    ; r16 (x) : List<Int>
    ; r17 (v5) : List<Int>

=== closure L0 (ValueId(0)) ===
     0 │   r0 = undef
     1 │   r1 = -r2
     2 │   return r1

    ; r0 (v7) : Int
    ; r1 (v6) : Int
    ; r2 (v1) : Int
    ; r3 (v3) : Ref<Int>
    ; r4 (i) : Int
    ; r5 (v4) : Ref<Int>
