acvus-mir-test/tests/snapshots/e2e__lambda_string_concat.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     0 │   r0 = storage_load $names
     1 │   r1 = closure L0 []
     2 │   r2 = call map(r0, r1)
     3 │   r3 = const ","
     4 │   r4 = call join(r2, r3)
     5 │   emit r4

    ; r0 ($names) : List<String>
    ; r1 (v1) : Fn(String) -> String
    ; r2 (map(...)) : List<String>
    ; r3 (v3) : String
    ; r4 (join(...)) : String

=== closure L0 (n) ===
     0 │   r1 = const "!"
     1 │   r2 = r0 + r1
     2 │   return r2

    ; r0 (v0) : String
    ; r1 (v1) : String
    ; r2 (v2) : String
