acvus-mir-test/tests/snapshots/e2e__list_destructure_tail.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""
  T1 = "empty"

=== main ===
     0 │   r0 = context_project @items
     1 │   r1 = context_load r0
     3 │ L2:
     4 │   r2 = test len(r1) >= 2
     5 │   jump_if r2 then L3 else L4
     6 │ L3:
     7 │   r3 = r1[-2]
     9 │   r4 = r2 && true (r5)
    10 │   r6 = r1[-1]
    12 │   r7 = r4 && true (r8)
    13 │   jump L5(r7)
    14 │ L4:
    16 │   jump L5(false (r9))
    17 │ L5(r10: Bool):
    18 │   jump_if r10 then L6 else L1
    19 │ L6:
    20 │   r11 = r1[-2]
    21 │   r12 = r1[-1]
    23 │   r13 = poison
    24 │   r14 = T0 + r13
    25 │   jump L0(r14)
    26 │ L1:
    29 │   r15 = T0 + T1
    30 │   jump L0(r15)
    31 │ L0(r16: String):  ; merge_of L2
    32 │   r17 = T0 + r16
    33 │   return r17

    ; r0 (@items) : <error>
    ; r1 (v1) : List<Int>
    ; r18 (v2) : String
    ; r19 (@items) : List<Int>
    ; r20 (v4) : List<Int>
    ; r2 (v5) : Bool
    ; r3 (v6) : Int
    ; r5 (v7) : Bool
    ; r4 (v8) : Bool
    ; r6 (v9) : Int
    ; r8 (v10) : Bool
    ; r7 (v11) : Bool
    ; r10 (v12) : Bool
    ; r9 (v13) : Bool
    ; r11 (a) : Int
    ; r12 (b) : Int
    ; r21 (v16) : String
    ; r13 (to_string(...)) : String
    ; r14 (v18) : String
    ; r22 (v19) : String
    ; r23 (v20) : String
    ; r15 (v21) : String
    ; r16 (v22) : String
    ; r17 (v23) : String
