acvus-mir-test/tests/snapshots/e2e__list_exact_match.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""
  T1 = "wrong length"

=== main ===
     0 │   r0 = undef
     1 │   r1 = undef
     2 │   r2 = context_project @items
     3 │   r3 = context_load r2
     5 │ L2:
     6 │   r4 = test len(r3) == 2
     7 │   jump_if r4 then L3 else L4
     8 │ L3:
     9 │   r5 = r3[0]
    11 │   r6 = r4 && true (r7)
    12 │   r8 = r3[1]
    14 │   r9 = r6 && true (r10)
    15 │   jump L5(r9)
    16 │ L4:
    18 │   jump L5(false (r11))
    19 │ L5(r12: Bool):
    20 │   jump_if r12 then L6 else L1
    21 │ L6:
    22 │   r13 = r3[0]
    23 │   r14 = r3[1]
    25 │   r15 = call #0(r13)
    26 │   r16 = T0 + r15
    27 │   jump L0(r16, r13, r14)
    28 │ L1:
    31 │   r17 = T0 + T1
    32 │   jump L0(r17, r0, r1)
    33 │ L0(r18: String, r19: Int, r20: Int):  ; merge_of L2
    34 │   r21 = T0 + r18
    35 │   return r21

    ; r0 (v26) : Int
    ; r1 (v27) : Int
    ; r2 (@items) : List<Int>
    ; r3 (v2) : List<Int>
    ; r4 (v6) : Bool
    ; r5 (v7) : Int
    ; r6 (v9) : Bool
    ; r7 (v8) : Bool
    ; r8 (v10) : Int
    ; r9 (v12) : Bool
    ; r10 (v11) : Bool
    ; r11 (v14) : Bool
    ; r12 (v13) : Bool
    ; r13 (a) : Int
    ; r14 (b) : Int
    ; r15 (to_string(...)) : String
    ; r16 (v20) : String
    ; r17 (v23) : String
    ; r18 (v24) : String
    ; r19 (v30) : Int
    ; r20 (v31) : Int
    ; r21 (v25) : String
    ; r22 (v3) : String
    ; r23 (v22) : String
    ; r24 (v17) : String
    ; r25 (a) : Int
    ; r26 (v21) : String
    ; r27 (v5) : List<Int>
    ; r28 (@items) : List<Int>
