acvus-mir-test/tests/snapshots/e2e__list_head_with_object_elements.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = "empty"

=== main ===
     0 │   r0 = context_load @users
     1 │ L2:
     2 │   r1 = test len(r0) >= 1
     3 │   jump_if r1 then L3 else L4
     4 │ L3:
     5 │   r2 = r0[0]
     7 │   r4 = r1 && true (r3)
     8 │   jump L5(r4)
     9 │ L4:
    11 │   jump L5(false (r6))
    12 │ L5(r5: Bool):
    13 │   jump_if r5 then L6 else L1
    14 │ L6:
    15 │   r7 = r0[0]
    16 │   r8 = r7.name
    17 │   yield r8
    18 │   jump L0
    19 │ L1:
    21 │   yield T0
    22 │ L0:  ; merge_of L2

    ; r0 (@users) : List<{name: String}>
    ; r1 (v1) : Bool
    ; r2 (v2) : {name: String}
    ; r3 (v3) : Bool
    ; r4 (v4) : Bool
    ; r5 (v5) : Bool
    ; r6 (v6) : Bool
    ; r7 (first) : {name: String}
    ; r8 (name) : String
    ; r9 (v9) : String
