acvus-mir-test/tests/snapshots/e2e__list_literal_expression.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 │   r0 = undef
     5 │   r1 = list [1 (r2), 2 (r3), 3 (r4)]
     7 │   r5 = T0 + T0
     8 │   r6 = cast DequeToList r1
     9 │   r7 = call #0(r6)
    10 │   r8 = call #1(r7)
    11 │   r9 = r5 + r8
    12 │   return r9

    ; r0 (v16) : Deque<Int, Identity(IdentityId(0))>
    ; r1 (v5) : Deque<Int, Identity(IdentityId(0))>
    ; r2 (v2) : Int
    ; r3 (v3) : Int
    ; r4 (v4) : Int
    ; r5 (v9) : String
    ; r6 (v12) : List<Int>
    ; r7 (len(...)) : Int
    ; r8 (to_string(...)) : String
    ; r9 (v15) : String
    ; r10 (x) : Deque<Int, Identity(IdentityId(0))>
    ; r11 (v1) : String
    ; r12 (v7) : Ref<Deque<Int, Identity(IdentityId(0))>>
    ; r13 (v10) : Ref<Deque<Int, Identity(IdentityId(0))>>
    ; r14 (v8) : String
